<resources>
    <string name="app_name">FamuConnect</string>
    <string name="heading">FamuConnect</string>
    <string name="create_account">Join our community of farmers\n and buyers and support \nlocal agriculture</string>
    <string name="otp_text">Add your phone number. We\'ll send you a verification code so we know you are real.</string>
    <string name="country_code">+256-</string>
    <string name="_123456789">123456789</string>
    <string name="send_otp">Send Verification Code</string>
    <string name="licence_agrement">By clicking continue, \nI hereby agree and accept the \nTerms of Service and Privacy Policy \nin use of FarmConnect app</string>
    <string name="din_t_receive_opt">Didn\'t you receive any code?</string>
    <string name="resend_otp">Resend Code</string>
    <string name="verify">Verify Phone Number</string>
    <string name="enter_your_otp_code_here_sent_to">Enter Your OTP Code Sent To.</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="create_new_contact_button_label">Create New Contact</string>
    <string name="create_new_group_button_label">Create New Group</string>
    <string name="chat_avatar">profile picture</string>
    <string name="chat_name">Username</string>
    <string name="add_zone_activity_header">Collection Zones help you to set up virtual markets \n to collect products from your customers</string>
    <string-array name="gender_values">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->EmptyZonesFragmentLabel
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="EmptyZonesFragmentLabel">No collection zones currently setup</string>
    <string name="EmptyProductsPostsLabel">No products have been posted to this zone yet</string>
    <string name="empty_contacts_list_message">Yo don\'t have people using this app \n in your contacts</string>
    <string name="registered_contacts_label">Contacts on Farm Connect</string>
    <string name="save_menu_item_text">Save</string>
    <string name="uint_price_hint">eg. 10000</string>
    <string name="unit_price_label">Unit Price</string>
    <string name="price_label">Total Amount</string>
    <string name="auto_price_hint">0</string>
    <string name="product_quantity_hint">eg. 10bags or 50kgs</string>
    <string name="quantity_label">Quantity</string>
    <string name="product_inputs_hint">eg. coffee, beans, potatoes</string>
    <string name="product_input_label">Product Name</string>
    <string name="alt_text_for_product_image_view">Product Image</string>
    <string name="products_to_collect">Products To Collect</string>
    <string name="description">Description</string>
    <string name="zone_location">Location such district,village</string>
    <string name="zone_name">Zone Name</string>
    <string name="purchases_icon_title">Purchases</string>
    <string name="remove_product_warning">You can\'t remove this product because, removing it would delete it permanently.</string>
    <string name="remove_product_info">By Clicking Ok, you will remove this product from this zone</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="privacy_statement">As FamuConnect, we take full responsibility of ensuring that your chats, zones, products,
        calls and payments remain only accessible to the people you choose mostly those in your contact list.
    </string>
</resources>