<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="vertical"
    tools:context=".view.activities.WelcomeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/farmconnectlogo" />


    <TextView
        android:id="@+id/welcome_message"
        android:layout_below="@id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/create_account"
        android:textSize="20sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/continue_button"
        android:layout_below="@+id/welcome_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="20dp"
        android:text="Continue"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:textColor="@color/colorWhite"
        android:background="@drawable/background_button"/>

    <TextView
        android:id="@+id/licence_text"
        android:layout_below="@id/continue_button"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:text="@string/licence_agrement" />

    </RelativeLayout>

</ScrollView>