<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ChatActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include
                android:id="@+id/start_new_call_toolbar"
                layout="@layout/toolbar" />

        </com.google.android.material.appbar.AppBarLayout>

        <Button
            android:id="@+id/create_new_contact_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="?attr/colorPrimary"
            android:drawableStart="@drawable/baseline_contacts_24"
            android:drawablePadding="5dp"
            android:gravity="start|center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/create_new_contact_button_label"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/create_new_group_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="?attr/colorPrimary"
            android:drawableStart="@drawable/baseline_group_24"
            android:drawablePadding="5dp"
            android:gravity="start|center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/create_new_group_button_label"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:text="@string/registered_contacts_label"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/contacts_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp" />

        <TextView
            android:id="@+id/empty_contacts_list_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/empty_contacts_list_message"
            android:textSize="20sp"
            android:visibility="gone"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>